--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.mail.password=zeuadatwqiovufph
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.protocol=smtp
+
+#kafka
+spring.kafka.bootstrap-servers=localhost:9092
+
